--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,12 @@ repositories {
 }
 
 dependencies {
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.springframework.data:spring-data-jpa:3.1.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.2'
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
