--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -30,12 +30,13 @@ jobs:
               --env "BP_OCI_SOURCE=https://github.com/ebilsanta/true-colours-game" \
               --env "BP_JVM_VERSION=17" \
               --env "BP_NATIVE_IMAGE=true" \
+              --cache-image ghcr.io/ebilsanta/true-colours-backend-paketo-cache-image:latest \
               --publish
-#              --cache-image ghcr.io/ebilsanta/true-colours-backend-paketo-cache-image:latest \
+              
               
               
       - name: Install flyctl via https://github.com/superfly/flyctl-actions
         uses: superfly/flyctl-actions/setup-flyctl@master
       
       - name: Deploy our Spring Boot app to fly.io
-        run: flyctl deploy --image ghcr.io/ebilsanta/true-colours-backend
+        run: flyctl deploy --image ghcr.io/ebilsanta/true-colours-backend --config ./backend/fly.toml 
