--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: print directory
+        run: ls
       - name: Change to frontend directory
         run: cd frontend
       - name: Install Vercel CLI
