--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -13,17 +13,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Change to frontend directory
-        run: cd frontend
-      - name: print directory
-        run: ls
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: print directory
-        run: ls
+        run: |
+          cd frontend \
+          vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }} 
       - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: | 
+          cd frontend \
+          vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: | 
+          cd frontend \
+          vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
