--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -17,13 +17,13 @@ jobs:
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
         run: |
-          cd frontend \
+          cd frontend 
           vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }} 
       - name: Build Project Artifacts
         run: | 
-          cd frontend \
+          cd frontend 
           vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
         run: | 
-          cd frontend \
+          cd frontend 
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
