--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,6 +8,9 @@ on:
       - main
     paths-ignore:
       - 'backend/**'
+defaults:
+  run:
+    working-directory: frontend
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
@@ -22,14 +25,10 @@ jobs:
       - name: Install Vercel CLI
         run: pnpm add --global vercel@latest
       - name: Pull Vercel Environment Information
-        run: |
-          cd frontend 
-          vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }} 
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }} 
+      - name: Update lockfile
+        run: pnpm install --no-frozen-lockfile
       - name: Build Project Artifacts
-        run: | 
-          cd frontend 
-          vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: | 
-          cd frontend 
-          vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
