--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -7,6 +7,10 @@ on:
     paths-ignore:
       - 'frontend/**'
 
+defaults:
+  run:
+    working-directory: backend
+
 jobs:
   autodeploy:
     runs-on: ubuntu-latest
@@ -14,32 +18,16 @@ jobs:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-
-      - name: Install pack CLI via the official buildpack Action
-        uses: buildpacks/github-actions/setup-pack@v4.8.1
-
-      - name: Build app with pack CLI & publish to GitHub Container Registry
-        run: |
-          pack build ghcr.io/ebilsanta/true-colours-backend:latest \
-              --builder paketobuildpacks/builder:tiny \
-              --buildpack paketo-buildpacks/java-native-image@7.0.0 \
-              --path "./backend" \
-              --env "BP_OCI_SOURCE=https://github.com/ebilsanta/true-colours-game" \
-              --env "BP_NATIVE_IMAGE=true" \
-              --env "BP_JVM_VERSION=17"
-              --cache-image ghcr.io/ebilsanta/true-colours-backend-paketo-cache-image:latest \
-              --publish
-              
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Compile native image
+        run: mvn -Pnative native:compile
+      
       - name: Install flyctl via https://github.com/superfly/flyctl-actions
         uses: superfly/flyctl-actions/setup-flyctl@master
       
       - name: Deploy our Spring Boot app to fly.io
-        run: flyctl deploy --image ghcr.io/ebilsanta/true-colours-backend --config ./backend/fly.toml 
+        run: flyctl deploy --remote-only
