--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -22,10 +22,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: '17' # for a specific JDK 17; or '17' for the latest JDK 17
+          distribution: 'graalvm' # New 'distribution' option
       - name: Compile native image
         run: mvn -Pnative native:compile
       
