--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -32,7 +32,10 @@ jobs:
       - name: Install flyctl via https://github.com/superfly/flyctl-actions
         uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - name: Set fly secrets
-        run: flyctl secrets set DATABASE_URL=${{ secrets.DATABASE_URL }} DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}      
+      
       - name: Deploy our Spring Boot app to fly.io
-        run: flyctl deploy --remote-only
+        run: |
+          flyctl deploy --remote-only \
+          --env "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
+          --env "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}"\
+          --env "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}"
