--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'frontend/**'
+    paths:
+      - 'backend/**'
+      - '.github/workflows/deploy-backend.yml'
 
 defaults:
   run:
