--- a/.github/workflows/test-and-deploy-backend.yml
+++ b/.github/workflows/test-and-deploy-backend.yml
@@ -1,4 +1,4 @@
-name: Fly.io Deployment for Backend
+name: Test Backend and deploy to Fly.io
 
 on:
   push:
@@ -23,6 +23,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Run Maven tests
+        run: mvn test
       - uses: graalvm/setup-graalvm@v1
         with:
           java-version: '17' # for a specific JDK 17; or '17' for the latest JDK 17
